update unzip in /www

--- a/template/nginx/default.j2
+++ b/template/nginx/default.j2
@@ -3,7 +3,7 @@ upstream php {
 }
 server {
         server_name book.example.com;
-        root /var/www/book.example.com;
+        root /var/www/wordpress;
 
         index index.php;
 
