--- a/template/wordpress/wp-config3.php.j2
+++ b/template/wordpress/wp-config3.php.j2
@@ -51,7 +51,7 @@ define( 'SECURE_AUTH_KEY',  '*VlRxGec}I~=`^Yz{J4Rtn8W4)]#=#P,l~5Mj 4=!3->/J]%(3R
 define( 'LOGGED_IN_KEY',    '(#B.hTVTvfY&fr-NIwYgD@7g0[<oFm_2Z!T],[zDI;*?~ekU/vM1TeS}$*b`q;sl' );
 define( 'NONCE_KEY',        ' O>,Tz8jc_Cfit6Z|rQ(-j5zwMAkb$o1%%Krr-k{*]y.QgVyF,]N:X1}?mWY}v$Y' );
 define( 'AUTH_SALT',        'JAtyHqfpqhcmIADkM*pc*{bR %WZbRu1,B#L$Sj)Y~elWeP,Pe$1CcOgX-0@9}s8' );
-define( 'SECURE_AUTH_SALT', ',l~;rM?pQ7tIPdVSoq9:edcOym?OnP8F0%h8JT\{%qvpMUe<[A@rZanU9u2ws@y!v' );
+define( 'SECURE_AUTH_SALT', ',l~;rM?pQ7tIPdVSoq9:edcOym?OnP8F0%h8JT\{\%qvpMUe<[A@rZanU9u2ws@y!v' );
 define( 'LOGGED_IN_SALT',   ')clpk4LUtr`@[a.wub)z$(F2WT!~t[2>oEvH?e/N!4!*[?;sBwRk~Mv?g}Y;.SVn' );
 define( 'NONCE_SALT',       '/`x@m-[pzwU>:c~{qmg=Z(^-5Qu []GchbV t-jQg!jST%3gtXw/zigeNK9QFNKJ' );
 
