--- a/template/wordpress/wp-config3.php.j2
+++ b/template/wordpress/wp-config3.php.j2
@@ -46,14 +46,14 @@ define( 'DB_COLLATE', '' );
  *
  * @since 2.6.0
  */
-define( 'AUTH_KEY',         'hVv%W9)|Yg~AX3oe6wxMS|kM(Ic.-+SvVl[NGwQDGggeKp$Ddt&[OS0GCAE,_%>N' );
-define( 'SECURE_AUTH_KEY',  '*VlRxGec}I~=`^Yz{J4Rtn8W4)]#=#P,l~5Mj 4=!3->/J]%(3Ru5k3!Tf|6<kE+' );
-define( 'LOGGED_IN_KEY',    '(#B.hTVTvfY&fr-NIwYgD@7g0[<oFm_2Z!T],[zDI;*?~ekU/vM1TeS}$*b`q;sl' );
-define( 'NONCE_KEY',        ' O>,Tz8jc_Cfit6Z|rQ(-j5zwMAkb$o1%%Krr-k{*]y.QgVyF,]N:X1}?mWY}v$Y' );
-define( 'AUTH_SALT',        'JAtyHqfpqhcmIADkM*pc*{bR %WZbRu1,B#L$Sj)Y~elWeP,Pe$1CcOgX-0@9}s8' );
-define( 'SECURE_AUTH_SALT', ',l~;rM?pQ7tIPdVSoq9:edcOym?OnP8F0%h8JT\{\%qvpMUe<[A@rZanU9u2ws@y!v' );
-define( 'LOGGED_IN_SALT',   ')clpk4LUtr`@[a.wub)z$(F2WT!~t[2>oEvH?e/N!4!*[?;sBwRk~Mv?g}Y;.SVn' );
-define( 'NONCE_SALT',       '/`x@m-[pzwU>:c~{qmg=Z(^-5Qu []GchbV t-jQg!jST%3gtXw/zigeNK9QFNKJ' );
+define( 'AUTH_KEY',         '|i5gC^3y(P;NHy| Xl>a!Ma5z8LE}RrdOFz@gYe&tR:ojEGc ~|^%7F{kVZn@#Lz' );
+define( 'SECURE_AUTH_KEY',  'yj=hMph<Bt)>>c_YP8PX7c#r,S J/bz1LCZg vy<0Jy`ly#E? qOF2I D:7?76S.' );
+define( 'LOGGED_IN_KEY',    '&<G_h5^}+&){0{>Q~@]uQ)QLFI(eS/N/=N)|lDYsHHGH{EEP<`cvg)ijwJn4J;m7' );
+define( 'NONCE_KEY',        'ROfDCe<!iZa+p3BJYjfQ5xDmhPqGyUBdm&Z)BTkD$0SzC<*6iDAM(.yh4h_yAlAp' );
+define( 'AUTH_SALT',        'eV[WfU)*H5!)46w/wk%+KA91Z7@:6+~UH_l8oCi]IID=2msP(EJxR[_P$9}{@ng@' );
+define( 'SECURE_AUTH_SALT', 'ji-41d?WV^Ehq#dAIN`7Wx>%:y3@2%D4W2-QUd.hOKok?nS/;[QlL5mH^)q@perz' );
+define( 'LOGGED_IN_SALT',   'FgT[ 67@CtBXi FvZ0hb#KYeSUFZqv}e>`hox%RqS)RvedBi?fs_)`8L9;smH.%.' );
+define( 'NONCE_SALT',       'b<]g)Svo},EueB^g-=W4ZA9F7;USf;+nhVQg7V[2rdOTyM%8(%!.3wD;!K8t.E0>' );
 
 /**#@-*/
 
